<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="facebook_title">Facebook</string>
    <string name="twitter_title">Twitter</string>
    <string name="myspots">My Spotz</string>
    <string name="loading_spots">Loading Spots ...</string>

    <string-array name="share_spinner">
        <item>Facebook</item>
        <!--
         <item>Twitter</item>
	 	<item>Valor 3</item>
        -->
    </string-array>

    <string name="description">Description:</string>
    <string name="usersettings">User Settings</string>
    <string name="spottype">Spot Type:</string>
    <string name="city">City:</string>
    <string name="user">User:</string>
    <string name="followers">Followers:</string>
    <string name="type">Type:</string>
    <string name="language">Language:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="inputvalue">Input value:</string>
    <string name="infomessage">Message</string>
    <string name="dislikes">Dislikes:</string>
    <string name="likes">Likes:</string>
    <string name="like_example">0</string>
    <string name="change_media_camera">Change video to image and viceversa</string>
    <string name="change_camera">Change camera</string>
    <string name="facebook_app_id">843086735711329</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="hello">Hello World!</string>
    <string name="app_name">Spotz</string>
    <string name="search_hint">Cities, Users...</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_browse">title activity browse</string>
    <string name="latitude_longitude">LatitudeandLongitude</string>
    <string name="invalid_email">Email is invalid</string>
    <string name="connection_error_misconfigured">Wrong configuration</string>
    <string name="connection_error_internal">Internal error</string>
    <string name="connection_error_invalid_account">Invalid Account</string>
    <string name="connection_error_license_check_failed">Licence check failed</string>
    <string name="connection_error_network">Network error</string>
    <string name="connection_error_needs_resolution">Needs resolution error</string>
    <string name="connection_error_outdated">Needs resolution error</string>
    <string name="connection_error_disabled">Disabled</string>
    <string name="connection_error_invalid">Invalid</string>
    <string name="connection_error_missing">Missing</string>
    <string name="connection_error_sign_in_required">Sign in required</string>
    <string name="connection_error_unknown">Unkown error</string>
    <string name="resolved">Resolved</string>
    <string name="no_resolution">No resolution</string>
    <string name="unknown_activity_request_code">Unknown activity request code</string>
    <string name="play_services_available">Play services available</string>
    <string name="location_updates_stopped">Location updates stopped </string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="location_updated">Location Updated</string>
    <string name="server_address">Server Address</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="changeValues">Changed values</string>
    <string name="confUpdated">Configuration updated</string>
    <string name="login_success">Login success</string>
    <string name="server_down">Server is down</string>
    <string name="usernameoremail">Email or username</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeatpassword">Repeat password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_success">Register success</string>
    <string name="please_input">Please input</string>
    <string name="not_connected">Not Connected</string>
    <string name="not_json_checkdata">Verify your information and try again</string>
    <string name="username_length">Username length must be 6 characters minimun</string>
    <string name="connection_problem">Connection problems, verify your internet conection</string>
    <string name="logout">Logout</string>
    <string name="profile_options">Profile Options</string>
    <string name="options">Options</string>

    <string-array name="profile_options_array">
        <item>Change Profile Picture</item>
    </string-array>
    
    <string-array name="myspots_options_array">
        <item>Retry upload</item>
        <item>Delete spot</item>
    </string-array>
    
    <string-array name="news_options_array">
        <item>View</item>
    </string-array>
    
    <string-array name="mynews_options_array">
        <item>View</item>
        <item>Delete</item>
    </string-array>
    
    <string-array name="spottype_upload">
        <item>Type(All)</item>
        <item>Social</item>
        <item>Cultural</item>
        <item>Musical</item>
        <item>Theft</item>
        <item>Roadblock</item>
        <item>Accident</item>
        <item>Protest</item>
        <item>Vandalism</item>
        <item>Bump</item>
        <item>Assault</item>
        <item>Sport</item>
    </string-array>
    
    <string-array name="spottype_array">
        <item>Other</item>
        <item>Social</item>
        <item>Cultural</item>
        <item>Musical</item>
        <item>Theft</item>
        <item>Roadblock</item>
        <item>Accident</item>
        <item>Protest</item>
        <item>Vandalism</item>
        <item>Bump</item>
        <item>Assault</item>
        <item>Sport</item>
    </string-array>
    
    <string-array name="spotdistance_array">
        <item>City</item>
        <item>5 KM</item>
        <item>15 KM</item>
        <item>50 KM</item>
        <item>100 KM</item>
    </string-array>
    
    <string-array name="pais">
        <item>España</item>        <item>Francia</item>
        <item>Alemania</item>
    </string-array>
    
    <string-array name="codigopais">
        <item>ESP</item>
        <item>FRA</item>
        <item>ALE</item>
    </string-array>

    <string name="inputEmail">Email</string>
    <string name="inputFirstName">Input your name</string>
    <string name="inputLastName">Input your last name</string>
    <string name="selectlanguage">Select the language</string>
    <string name="sucessfull_upload">Spot uploaded successfully</string>
    <string name="no_internet">No internet connection</string>
    <string name="spot_deleted_succesfull">Spot deleted successfully</string>
    <string name="failed_upload_spot">Failed to upload spot</string>
    <string name="jump_to_news">Watch Spotz</string>

    <string-array name="listentries">
        <item>English</item>
        <item>Spanish</item>
    </string-array>
    
    <string-array name="listvalues">
        <item>en</item>
        <item>es</item>
    </string-array>

    <string name="camera_string">Camera</string>
    <string name="events_string">Events</string>
    <string name="map_string">Map</string>
    <string name="profile_string">Profile</string>
    <string name="title_activity_logged_out">LoggedOutActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>