<menu 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto" >

    <item 
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_menu_rotate"
        android:title="@string/refresh"
        android:showAsAction="always"/>
    
    <item 
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_menu_moreoverflow_normal_holo_dark"
        android:title="@string/settings"
        android:showAsAction="ifRoom"/>
    
    <!--
<item
    android:id="@+id/action_settings"
    android:title="@string/action_settings"
    android:showAsAction="ifRoom"
    android:actionViewClass="android.widget.SearchView"
    android:hint = "@string/search_hint"
    android:icon="@drawable/ic_search" />

-->

<item
    android:id="@+id/action_logout"
    android:title="@string/logout" />


</menu>