<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white" >
    
    <LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical|center_horizontal"
	    android:gravity="center"
	    android:orientation="vertical"
	     >
	
	    <ImageView
	        android:id="@+id/login_image"
	        android:layout_width="178dp"
	        android:layout_height="70dp"
	        android:layout_gravity="center_horizontal"
	        android:contentDescription="@string/app_name"
	        android:src="@drawable/spotz" />
	    
		<LinearLayout 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical|center_horizontal"
			android:gravity="center"
			android:layout_marginTop="15dp"
			android:orientation="vertical" >
	
			<EditText
			    android:id="@+id/login_edtusername"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:ems="10"
			    android:gravity="center_vertical|center_horizontal"
			    android:hint="@string/usernameoremail"
			    android:imeOptions="actionNext|flagNoExtractUi"
			    android:inputType="text"
			    android:singleLine="true" >
		       	<requestFocus />
		  	</EditText>
		
		    <EditText
		        android:id="@+id/login_edtpassword"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:ems="10"
		        android:gravity="center_vertical|center_horizontal"
		        android:hint="@string/password"
		        android:imeOptions="actionSend|flagNoExtractUi"
		        android:inputType="textPassword"
		        android:singleLine="true">
		    </EditText>
		    
		</LinearLayout>
		
	    <Button
	        android:id="@+id/login_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_marginTop="15dp"
	        android:layout_gravity="center"
	        android:text="@string/login" />
	
	    <Button
	        android:id="@+id/login_register_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_marginTop="2dp"
	        android:layout_gravity="center"
	        android:text="@string/register" />
	    
	    <com.facebook.widget.LoginButton
	       		android:id="@+id/fb_login_button"
				android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				facebook:confirm_logout="false"
				facebook:fetch_user_info="true"
	        />
	    
	    <ProgressBar
	        android:id="@+id/login_progressbar"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="15dp"
	        android:layout_weight="1"
	        android:visibility="gone" />
	
	</LinearLayout>
    
    
</LinearLayout>
